--- a/Translation/item.json
+++ b/Translation/item.json
@@ -11069,6 +11069,546 @@
         "th":"",
         "id":""
     },
+    "item.10001.description":{
+        "en":"Crafting material for level 10-19 Gear",
+        "fr":"Matériel d'artisanat pour équipement de niveau 10-19",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10002.description":{
+        "en":"Crafting material for level 10-19 Gear",
+        "fr":"Matériel d'artisanat pour équipement de niveau 10-19",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10003.description":{
+        "en":"Crafting material for level 10-19 Gear",
+        "fr":"Matériel d'artisanat pour équipement de niveau 10-19",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10004.description":{
+        "en":"Crafting material for level 20-29 Gear",
+        "fr":"Matériel d'artisanat pour équipement de niveau 20-29",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10005.description":{
+        "en":"Crafting material for level 20-29 Gear",
+        "fr":"Matériel d'artisanat pour équipement de niveau 20-29",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10006.description":{
+        "en":"Crafting material for level 20-29 Gear",
+        "fr":"Matériel d'artisanat pour équipement de niveau 20-29",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10007.description":{
+        "en":"Crafting material for level 30-39 Gear",
+        "fr":"Matériel d'artisanat pour équipement de niveau 30-39",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10008.description":{
+        "en":"Crafting material for level 30-39 Gear",
+        "fr":"Matériel d'artisanat pour équipement de niveau 30-39",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10009.description":{
+        "en":"Crafting material for level 30-39 Gear",
+        "fr":"Matériel d'artisanat pour équipement de niveau 30-39",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10010.description":{
+        "en":"Crafting material for level 40-49 Gear",
+        "fr":"Matériel d'artisanat pour équipement de niveau 40-49",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10011.description":{
+        "en":"Crafting material for level 40-49 Gear",
+        "fr":"Matériel d'artisanat pour équipement de niveau 40-49",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10012.description":{
+        "en":"Crafting material for level 40-49 Gear",
+        "fr":"Matériel d'artisanat pour équipement de niveau 40-49",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10013.description":{
+        "en":"Crafting material for level 50-59 Gear",
+        "fr":"Matériel d'artisanat pour équipement de niveau 50-59",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10014.description":{
+        "en":"Crafting material for level 50-59 Gear",
+        "fr":"Matériel d'artisanat pour équipement de niveau 50-59",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10015.description":{
+        "en":"Crafting material for level 50-59 Gear",
+        "fr":"Matériel d'artisanat pour équipement de niveau 50-59",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10016.description":{
+        "en":"Crafting material for level 60-69 Gear",
+        "fr":"Matériel d'artisanat pour équipement de niveau 60-69",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10017.description":{
+        "en":"Crafting material for level 60-69 Gear",
+        "fr":"Matériel d'artisanat pour équipement de niveau 60-69",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10018.description":{
+        "en":"Crafting material for level 60-69 Gear",
+        "fr":"Matériel d'artisanat pour équipement de niveau 60-69",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10019.description":{
+        "en":"Crafting material for level 70-79 Gear",
+        "fr":"Matériel d'artisanat pour équipement de niveau 70-79",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10020.description":{
+        "en":"Crafting material for level 70-79 Gear",
+        "fr":"Matériel d'artisanat pour équipement de niveau 70-79",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10021.description":{
+        "en":"Crafting material for level 70-79 Gear",
+        "fr":"Matériel d'artisanat pour équipement de niveau 70-79",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10022.description":{
+        "en":"Crafting material for level 80-89 Gear",
+        "fr":"Matériel d'artisanat pour équipement de niveau 80-89",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10023.description":{
+        "en":"Crafting material for level 80-89 Gear",
+        "fr":"Matériel d'artisanat pour équipement de niveau 80-89",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10024.description":{
+        "en":"Crafting material for level 80-89 Gear",
+        "fr":"Matériel d'artisanat pour équipement de niveau 80-89",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10025.description":{
+        "en":"Crafting material for level 90-94 Gear",
+        "fr":"Matériel d'artisanat pour équipement de niveau 90-94",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10026.description":{
+        "en":"Crafting material for level 90-94 Gear",
+        "fr":"Matériel d'artisanat pour équipement de niveau 90-94",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10027.description":{
+        "en":"Crafting material for level 90-94 Gear",
+        "fr":"Matériel d'artisanat pour équipement de niveau 90-94",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10028.description":{
+        "en":"Crafting material for level 95 Gear",
+        "fr":"Matériel d'artisanat pour équipement de niveau 95",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10029.description":{
+        "en":"Crafting material for level 95 Gear",
+        "fr":"Matériel d'artisanat pour équipement de niveau 95",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10030.description":{
+        "en":"Crafting material for level 95 Gear",
+        "fr":"Matériel d'artisanat pour équipement de niveau 95",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.10100.description":{
         "en":"Lv. 10 Gear Material",
         "fr":"Matériaux d'Équipement Nv. 10",
