--- a/Translation/item.json
+++ b/Translation/item.json
@@ -9251,6 +9251,78 @@
         "th":"",
         "id":""
     },
+    "item.10509.name":{
+        "en":"[D]Ablaze Metal Piece",
+        "fr":"[D]Pièce de Métal d'Ablaze",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10510.name":{
+        "en":"[C]Ablaze Metal Piece",
+        "fr":"[C]Pièce de Métal d'Ablazet",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10511.name":{
+        "en":"[B]Ablaze Metal Piece",
+        "fr":"[B]Pièce de Métal d'Ablaze",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10512.name":{
+        "en":"[A]Ablaze Metal Piece",
+        "fr":"[A]Pièce de Métal d'Ablaze",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.11000.name":{
         "en":"Energy Essence (Minor)",
         "fr":"Essence d'Energie (Mineure)",
