--- a/Translation/item.json
+++ b/Translation/item.json
@@ -3340,7 +3340,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"[Linh Trứng] Sao Kindler",
+        "vi":"[Linh Trứng] Ngôi Sao Kindler",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4456,7 +4456,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Sao Kindler",
+        "vi":"Ngôi Sao Kindler",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8884,7 +8884,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cánh Hoa Đỏ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8902,7 +8902,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Móng Vuốt Rồng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8920,7 +8920,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cánh Tiên",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8938,7 +8938,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Quần Lót Thánh Tiên Đầm Lầy",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8956,7 +8956,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Bức Ảnh Gia Đình",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8974,7 +8974,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Mắt Mực",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8992,7 +8992,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Bằng Chứng Nhận Đội Trưởng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -9010,7 +9010,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Phước Lành Của Thủy Tinh Linh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -9028,7 +9028,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Mã Kỹ Thuật Viên",
         "ar":"",
         "it":"",
         "pl":"",
@@ -9046,7 +9046,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Kỳ Lân Tuyết",
         "ar":"",
         "it":"",
         "pl":"",
@@ -9064,7 +9064,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Đuôi Của Rồng Băng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -9082,7 +9082,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Bằng Chứng Anh Hùng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -10378,7 +10378,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Địa Thừng",
+        "vi":"Địa Hồn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11080,7 +11080,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nguyên liệu chế tạo cho trang bị cấp độ 10-19",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11098,7 +11098,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nguyên liệu chế tạo cho trang bị cấp độ 10-19",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11116,7 +11116,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nguyên liệu chế tạo cho trang bị cấp độ 10-19",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11134,7 +11134,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nguyên liệu chế tạo cho trang bị cấp độ 20-29",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11152,7 +11152,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nguyên liệu chế tạo cho trang bị cấp độ 20-29",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11170,7 +11170,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nguyên liệu chế tạo cho trang bị cấp độ 20-29",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11188,7 +11188,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nguyên liệu chế tạo cho trang bị cấp độ 30-39",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11206,7 +11206,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nguyên liệu chế tạo cho trang bị cấp độ 30-39",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11224,7 +11224,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nguyên liệu chế tạo cho trang bị cấp độ 30-39",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11242,7 +11242,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nguyên liệu chế tạo cho trang bị cấp độ 40-49",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11260,7 +11260,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nguyên liệu chế tạo cho trang bị cấp độ 40-49",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11278,7 +11278,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nguyên liệu chế tạo cho trang bị cấp độ 40-49",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11296,7 +11296,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nguyên liệu chế tạo cho trang bị cấp độ 50-59",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11314,7 +11314,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nguyên liệu chế tạo cho trang bị cấp độ 50-59",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11332,7 +11332,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nguyên liệu chế tạo cho trang bị cấp độ 50-59",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11350,7 +11350,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nguyên liệu chế tạo cho trang bị cấp độ 60-69",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11368,7 +11368,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nguyên liệu chế tạo cho trang bị cấp độ 60-69",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11386,7 +11386,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nguyên liệu chế tạo cho trang bị cấp độ 60-69",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11404,7 +11404,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nguyên liệu chế tạo cho trang bị cấp độ 70-79",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11422,7 +11422,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nguyên liệu chế tạo cho trang bị cấp độ 70-79",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11440,7 +11440,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nguyên liệu chế tạo cho trang bị cấp độ 70-79",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11458,7 +11458,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nguyên liệu chế tạo cho trang bị cấp độ 80-89",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11476,7 +11476,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nguyên liệu chế tạo cho trang bị cấp độ 80-89",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11494,7 +11494,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nguyên liệu chế tạo cho trang bị cấp độ 80-89",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11512,7 +11512,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nguyên liệu chế tạo cho trang bị cấp độ 90-94",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11530,7 +11530,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nguyên liệu chế tạo cho trang bị cấp độ 90-94",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11548,7 +11548,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nguyên liệu chế tạo cho trang bị cấp độ 90-94",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11566,7 +11566,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nguyên liệu chế tạo cho trang bị cấp độ 95",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11584,7 +11584,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nguyên liệu chế tạo cho trang bị cấp độ 95",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11602,7 +11602,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nguyên liệu chế tạo cho trang bị cấp độ 95",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11620,7 +11620,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nguyên Liệu Trang Bị Cấp 10",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11638,7 +11638,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nguyên Liệu Trang Bị Cấp 10",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11656,7 +11656,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nguyên Liệu Trang Bị Cấp 10",
         "ar":"",
         "it":"",
         "pl":"",
