--- a/Translation/map.json
+++ b/Translation/map.json
@@ -622,7 +622,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Thành Phố Byron 1",
+        "vi":"Tháp Byron 1",
         "ar":"",
         "it":"",
         "pl":"",
@@ -640,7 +640,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Thành Phố Byron - Điện Tinh Anh",
+        "vi":"Tháp Byron - Điện Tinh Anh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -658,7 +658,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Thành Phố Byron - Điện Tinh Anh Sâu",
+        "vi":"Tháp Byron - Điện Tinh Anh Sâu",
         "ar":"",
         "it":"",
         "pl":"",
