--- a/Translation/item.json
+++ b/Translation/item.json
@@ -9323,6 +9323,78 @@
         "th":"",
         "id":""
     },
+    "item.10513.name":{
+        "en":"[D]Hanes Metal Piece",
+        "fr":"[D]Pièce de Métal d'Hanes",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10514.name":{
+        "en":"[C]Hanes Metal Piece",
+        "fr":"[C]Pièce de Métal d'Hanes",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10515.name":{
+        "en":"[B]Hanes Metal Piece",
+        "fr":"[B]Pièce de Métal d'Hanes",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10516.name":{
+        "en":"[A]Hanes Metal Piece",
+        "fr":"[A]Pièce de Métal d'Hanes",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.11000.name":{
         "en":"Energy Essence (Minor)",
         "fr":"Essence d'Energie (Mineure)",
