--- a/Translation/item.json
+++ b/Translation/item.json
@@ -3331,7 +3331,7 @@
     },
     "item.3030.name":{
         "en":"[Spirit Egg] Star Kindler",
-        "fr":"[Oeuf d'esprit] Etoile Kindler",
+        "fr":"[Oeuf d'esprit] Allumeur d'Étoiles",
         "es":"",
         "ch":"",
         "kr":"",
@@ -4447,7 +4447,7 @@
     },
     "item.4030.name":{
         "en":"Star Kindler",
-        "fr":"Etoile Kindler",
+        "fr":"Allumeur d'Étoiles",
         "es":"",
         "ch":"",
         "kr":"",
