--- a/Translation/item.json
+++ b/Translation/item.json
@@ -9262,7 +9262,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[D]Mảnh Kim Loại Bùng Cháy",
         "ar":"",
         "it":"",
         "pl":"",
@@ -9280,7 +9280,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[C]Mảnh Kim Loại Bùng Cháy",
         "ar":"",
         "it":"",
         "pl":"",
@@ -9298,7 +9298,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[B]Mảnh Kim Loại Bùng Cháy",
         "ar":"",
         "it":"",
         "pl":"",
@@ -9316,7 +9316,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[A]Mảnh Kim Loại Bùng Cháy",
         "ar":"",
         "it":"",
         "pl":"",
@@ -9334,7 +9334,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[D]Mảnh Kim Loại Ơn Phước",
         "ar":"",
         "it":"",
         "pl":"",
@@ -9352,7 +9352,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[C]Mảnh Kim Loại Ơn Phước",
         "ar":"",
         "it":"",
         "pl":"",
@@ -9370,7 +9370,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[B]Mảnh Kim Loại Ơn Phước",
         "ar":"",
         "it":"",
         "pl":"",
@@ -9388,7 +9388,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[A]Mảnh Kim Loại Ơn Phước",
         "ar":"",
         "it":"",
         "pl":"",
@@ -10198,7 +10198,7 @@
         "de":"Fähigkeitsbuch [Magische Beherrschung]",
         "jp":"",
         "pt":"",
-        "vi":"Sách Kỹ Năng [Thống Trị Ma pháp]",
+        "vi":"Sách Kỹ Năng [Thống Trị Ma Pháp]",
         "ar":"",
         "it":"",
         "pl":"",
